<resources>
    <string name="app_name">Dialed In Zeroing App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scopes">Scopes</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_calculator">Sighting Tool</string>
    <string name="sign_up">Sign Up</string>
    <string name="passwordsignup">Password</string>
    <string name="title_activity_main">Scopes</string>
    <string name="title_activity_sight_tool">Sighting Tool</string>
    <string name="welcome_message">Welcome to Dialed In Zeroing App</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have and Account? Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="remember_me">Remember Me</string>
    <string name="display_name">Display Name</string>
    <string name="email_signup">Email Sign Up</string>
    <string name="user_name">Username</string>
    <string name="user_example_com">user@domain.com</string>
    <string name="app_logo">Dialed In Zeroing App</string>
    <string name="add_item">Add Item</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="app_subtitle">App Subtitle</string>
    <string name="reset_password">Reset Password</string>
    <string name="sight_tool_screen">Sight Tool Screen</string>

    <!-- API Keys -->
    <string name="google_maps_key">AIzaSyDAS_rSFKp1a_9ilOhaFELNrXIvvf0p6nw</string>
    <string name="open_weather_key">3c30b7176101fb45daa059c644805929</string>
    <!-- Navigation Drawer Titles -->
    <string name="find_shooting_range_near_me">Find Shooting Range Near Me</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="version">Version:</string>
    <string name="developers">Developers:</string>
    <string name="license">License:</string>
    <string name="description">Description:</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_maps">Maps</string>
    <string name="profile_image">Profile Image</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="update_profile">Update Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter_city_name_or_zip_code">Enter city name or zip code</string>
    <string name="get_weather">Get Weather</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="wind_direction">Wind Direction:</string>
    <string name="humidity">Humidity:</string>
    <string name="conditions">Conditions:</string>
</resources>