<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version" />

    <TextView
        android:id="@+id/developerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developers" />

    <TextView
        android:id="@+id/licenseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/description" />
</LinearLayout>
