<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/light_gray"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_launcher_foreground" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:drawableStart="@drawable/ic_email"
            android:padding="12dp"
            android:backgroundTint="@color/black"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:drawableStart="@drawable/ic_custom_password"
            android:padding="12dp"
            android:backgroundTint="@color/black"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_gravity="center"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00C853"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_gravity="center"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#D50000"
            android:text="@string/exit_login"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:paddingTop="16dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#0000FF"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>