<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E1A22"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/dialed_in_logo" />

        <!-- Display Name Field -->
        <EditText
            android:id="@+id/editTextDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:padding="12dp"
            android:paddingEnd="12dp"
            android:layout_marginBottom="16dp"
            tools:ignore="Autofill,VisualLintTextFieldSize"
            android:background="@drawable/edit_text_border"
            android:textColorHint="@color/input_field_background"/>

        <!-- Email Field -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:textColorHint="@color/input_field_background"
            android:hint="@string/email_signup"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/passwordsignup"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="Autofill,VisualLintTextFieldSize"
            android:background="@drawable/edit_text_border"
            android:textColorHint="@color/input_field_background"/>

        <!-- Sign-Up Button -->
        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/olive_drab"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            tools:ignore="VisualLintButtonSize" />

        <!-- Cancel Button -->
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cancel"
            android:backgroundTint="@color/olive_drab"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>