<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_header_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:ignore="MissingConstraints">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_profile_placeholder"
        android:contentDescription="@string/nav_header_desc"
        android:background="@drawable/circle_background"
        android:layout_marginBottom="8dp" />

    <!-- User Name -->
    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/orange_hue"
        android:textStyle="bold" />

    <!-- User Email -->
    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_example_com"
        android:textColor="@color/orange_hue"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
</LinearLayout>